parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    COMMENTBLOCK
    EOF

Grammar

Rule 0     S' -> program
Rule 1     program -> function program
Rule 2     program -> external-declaration program
Rule 3     program -> empty
Rule 4     external-declaration -> type assignment SEMICOLON
Rule 5     external-declaration -> array_usage SEMICOLON
Rule 6     external-declaration -> type array_usage SEMICOLON
Rule 7     external-declaration -> macro_definition
Rule 8     external-declaration -> file_inclusion
Rule 9     declaration -> type assignment SEMICOLON
Rule 10    declaration -> assignment SEMICOLON
Rule 11    declaration -> function_call SEMICOLON
Rule 12    declaration -> array_usage SEMICOLON
Rule 13    declaration -> type array_usage SEMICOLON
Rule 14    assignment -> ID ASSIGN assignment
Rule 15    assignment -> ID ASSIGN function_call
Rule 16    assignment -> ID ASSIGN array_usage
Rule 17    assignment -> array_usage ASSIGN assignment
Rule 18    assignment -> ID COMMA assignment
Rule 19    assignment -> NUMBER COMMA assignment
Rule 20    assignment -> ID PLUS assignment
Rule 21    assignment -> ID MINUS assignment
Rule 22    assignment -> ID TIMES assignment
Rule 23    assignment -> ID DIVIDE assignment
Rule 24    assignment -> ID MODULUS assignment
Rule 25    assignment -> NUMBER PLUS assignment
Rule 26    assignment -> NUMBER MINUS assignment
Rule 27    assignment -> NUMBER TIMES assignment
Rule 28    assignment -> NUMBER DIVIDE assignment
Rule 29    assignment -> NUMBER MODULUS assignment
Rule 30    assignment -> APOST assignment APOST
Rule 31    assignment -> LPAREN assignment RPAREN
Rule 32    assignment -> MINUS assignment
Rule 33    assignment -> NUMBER PLUS PLUS
Rule 34    assignment -> ID PLUS PLUS
Rule 35    assignment -> array_usage PLUS PLUS
Rule 36    assignment -> NUMBER MINUS MINUS
Rule 37    assignment -> ID MINUS MINUS
Rule 38    assignment -> array_usage MINUS MINUS
Rule 39    assignment -> NUMBER
Rule 40    assignment -> ID
Rule 41    assignment -> LETTER
Rule 42    function_call -> ID LPAREN RPAREN
Rule 43    function_call -> ID LPAREN assignment RPAREN
Rule 44    array_usage -> ID LBRACKET assignment RBRACKET
Rule 45    function -> type ID LPAREN argument_list_option RPAREN compound_statement
Rule 46    argument_list_option -> argument_list
Rule 47    argument_list_option -> empty
Rule 48    argument_list -> argument_list COMMA argument
Rule 49    argument_list -> argument
Rule 50    argument -> type ID
Rule 51    compound_statement -> LBRACE statement_list RBRACE
Rule 52    statement_list -> statement_list statement
Rule 53    statement_list -> empty
Rule 54    statement -> iteration_statement
Rule 55    statement -> declaration
Rule 56    statement -> selection_statement
Rule 57    statement -> return-statement
Rule 58    type -> INT
Rule 59    type -> FLOAT
Rule 60    type -> CHAR
Rule 61    type -> VOID
Rule 62    iteration_statement -> WHILE LPAREN expression RPAREN compound_statement
Rule 63    iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 64    iteration_statement -> DO compound_statement WHILE LPAREN expression RPAREN SEMICOLON
Rule 65    iteration_statement -> DO statement WHILE LPAREN expression RPAREN SEMICOLON
Rule 66    selection_statement -> IF LPAREN expression RPAREN compound_statement
Rule 67    selection_statement -> IF LPAREN expression RPAREN statement
Rule 68    selection_statement -> IF LPAREN expression RPAREN compound_statement ELSE compound_statement
Rule 69    selection_statement -> IF LPAREN expression RPAREN compound_statement ELSE statement
Rule 70    selection_statement -> IF LPAREN expression RPAREN statement ELSE compound_statement
Rule 71    selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 72    return-statement -> RETURN SEMICOLON
Rule 73    return-statement -> RETURN expression SEMICOLON
Rule 74    expression -> expression EQUALS expression
Rule 75    expression -> expression LESS expression
Rule 76    expression -> expression GREATER expression
Rule 77    expression -> expression AND expression
Rule 78    expression -> expression OR expression
Rule 79    expression -> NOT expression
Rule 80    expression -> assignment
Rule 81    expression -> array_usage
Rule 82    macro_definition -> POUND DEFINE ID assignment
Rule 83    file_inclusion -> POUND INCLUDE LESS HEADER GREATER
Rule 84    file_inclusion -> POUND INCLUDE QUOTE HEADER QUOTE
Rule 85    empty -> <empty>

Terminals, with rules where they appear

AND                  : 77
APOST                : 30 30
ASSIGN               : 14 15 16 17
CHAR                 : 60
COMMA                : 18 19 48
COMMENT              : 
COMMENTBLOCK         : 
DEFINE               : 82
DIVIDE               : 23 28
DO                   : 64 65
ELSE                 : 68 69 70 71
EOF                  : 
EQUALS               : 74
FLOAT                : 59
GREATER              : 76 83
HEADER               : 83 84
ID                   : 14 15 16 18 20 21 22 23 24 34 37 40 42 43 44 45 50 82
IF                   : 66 67 68 69 70 71
INCLUDE              : 83 84
INT                  : 58
LBRACE               : 51
LBRACKET             : 44
LESS                 : 75 83
LETTER               : 41
LPAREN               : 31 42 43 45 62 63 64 65 66 67 68 69 70 71
MINUS                : 21 26 32 36 36 37 37 38 38
MODULUS              : 24 29
NOT                  : 79
NUMBER               : 19 25 26 27 28 29 33 36 39
OR                   : 78
PLUS                 : 20 25 33 33 34 34 35 35
POUND                : 82 83 84
QUOTE                : 84 84
RBRACE               : 51
RBRACKET             : 44
RETURN               : 72 73
RPAREN               : 31 42 43 45 62 63 64 65 66 67 68 69 70 71
SEMICOLON            : 4 5 6 9 10 11 12 13 64 65 72 73
TIMES                : 22 27
VOID                 : 61
WHILE                : 62 63 64 65
error                : 

Nonterminals, with rules where they appear

argument             : 48 49
argument_list        : 46 48
argument_list_option : 45
array_usage          : 5 6 12 13 16 17 35 38 81
assignment           : 4 9 10 14 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 43 44 80 82
compound_statement   : 45 62 64 66 68 68 69 70
declaration          : 55
empty                : 3 47 53
expression           : 62 63 64 65 66 67 68 69 70 71 73 74 74 75 75 76 76 77 77 78 78 79
external-declaration : 2
file_inclusion       : 8
function             : 1
function_call        : 11 15
iteration_statement  : 54
macro_definition     : 7
program              : 1 2 0
return-statement     : 57
selection_statement  : 56
statement            : 52 63 65 67 69 70 71 71
statement_list       : 51 52
type                 : 4 6 9 13 45 50

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . function program
    (2) program -> . external-declaration program
    (3) program -> . empty
    (45) function -> . type ID LPAREN argument_list_option RPAREN compound_statement
    (4) external-declaration -> . type assignment SEMICOLON
    (5) external-declaration -> . array_usage SEMICOLON
    (6) external-declaration -> . type array_usage SEMICOLON
    (7) external-declaration -> . macro_definition
    (8) external-declaration -> . file_inclusion
    (85) empty -> .
    (58) type -> . INT
    (59) type -> . FLOAT
    (60) type -> . CHAR
    (61) type -> . VOID
    (44) array_usage -> . ID LBRACKET assignment RBRACKET
    (82) macro_definition -> . POUND DEFINE ID assignment
    (83) file_inclusion -> . POUND INCLUDE LESS HEADER GREATER
    (84) file_inclusion -> . POUND INCLUDE QUOTE HEADER QUOTE

    $end            reduce using rule 85 (empty -> .)
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    CHAR            shift and go to state 12
    VOID            shift and go to state 13
    ID              shift and go to state 6
    POUND           shift and go to state 14

    program                        shift and go to state 1
    function                       shift and go to state 2
    external-declaration           shift and go to state 3
    empty                          shift and go to state 4
    type                           shift and go to state 5
    array_usage                    shift and go to state 7
    macro_definition               shift and go to state 8
    file_inclusion                 shift and go to state 9

state 1

    (0) S' -> program .



state 2

    (1) program -> function . program
    (1) program -> . function program
    (2) program -> . external-declaration program
    (3) program -> . empty
    (45) function -> . type ID LPAREN argument_list_option RPAREN compound_statement
    (4) external-declaration -> . type assignment SEMICOLON
    (5) external-declaration -> . array_usage SEMICOLON
    (6) external-declaration -> . type array_usage SEMICOLON
    (7) external-declaration -> . macro_definition
    (8) external-declaration -> . file_inclusion
    (85) empty -> .
    (58) type -> . INT
    (59) type -> . FLOAT
    (60) type -> . CHAR
    (61) type -> . VOID
    (44) array_usage -> . ID LBRACKET assignment RBRACKET
    (82) macro_definition -> . POUND DEFINE ID assignment
    (83) file_inclusion -> . POUND INCLUDE LESS HEADER GREATER
    (84) file_inclusion -> . POUND INCLUDE QUOTE HEADER QUOTE

    $end            reduce using rule 85 (empty -> .)
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    CHAR            shift and go to state 12
    VOID            shift and go to state 13
    ID              shift and go to state 6
    POUND           shift and go to state 14

    function                       shift and go to state 2
    program                        shift and go to state 15
    external-declaration           shift and go to state 3
    empty                          shift and go to state 4
    type                           shift and go to state 5
    array_usage                    shift and go to state 7
    macro_definition               shift and go to state 8
    file_inclusion                 shift and go to state 9

state 3

    (2) program -> external-declaration . program
    (1) program -> . function program
    (2) program -> . external-declaration program
    (3) program -> . empty
    (45) function -> . type ID LPAREN argument_list_option RPAREN compound_statement
    (4) external-declaration -> . type assignment SEMICOLON
    (5) external-declaration -> . array_usage SEMICOLON
    (6) external-declaration -> . type array_usage SEMICOLON
    (7) external-declaration -> . macro_definition
    (8) external-declaration -> . file_inclusion
    (85) empty -> .
    (58) type -> . INT
    (59) type -> . FLOAT
    (60) type -> . CHAR
    (61) type -> . VOID
    (44) array_usage -> . ID LBRACKET assignment RBRACKET
    (82) macro_definition -> . POUND DEFINE ID assignment
    (83) file_inclusion -> . POUND INCLUDE LESS HEADER GREATER
    (84) file_inclusion -> . POUND INCLUDE QUOTE HEADER QUOTE

    $end            reduce using rule 85 (empty -> .)
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    CHAR            shift and go to state 12
    VOID            shift and go to state 13
    ID              shift and go to state 6
    POUND           shift and go to state 14

    external-declaration           shift and go to state 3
    program                        shift and go to state 16
    function                       shift and go to state 2
    empty                          shift and go to state 4
    type                           shift and go to state 5
    array_usage                    shift and go to state 7
    macro_definition               shift and go to state 8
    file_inclusion                 shift and go to state 9

state 4

    (3) program -> empty .

    $end            reduce using rule 3 (program -> empty .)


state 5

    (45) function -> type . ID LPAREN argument_list_option RPAREN compound_statement
    (4) external-declaration -> type . assignment SEMICOLON
    (6) external-declaration -> type . array_usage SEMICOLON
    (14) assignment -> . ID ASSIGN assignment
    (15) assignment -> . ID ASSIGN function_call
    (16) assignment -> . ID ASSIGN array_usage
    (17) assignment -> . array_usage ASSIGN assignment
    (18) assignment -> . ID COMMA assignment
    (19) assignment -> . NUMBER COMMA assignment
    (20) assignment -> . ID PLUS assignment
    (21) assignment -> . ID MINUS assignment
    (22) assignment -> . ID TIMES assignment
    (23) assignment -> . ID DIVIDE assignment
    (24) assignment -> . ID MODULUS assignment
    (25) assignment -> . NUMBER PLUS assignment
    (26) assignment -> . NUMBER MINUS assignment
    (27) assignment -> . NUMBER TIMES assignment
    (28) assignment -> . NUMBER DIVIDE assignment
    (29) assignment -> . NUMBER MODULUS assignment
    (30) assignment -> . APOST assignment APOST
    (31) assignment -> . LPAREN assignment RPAREN
    (32) assignment -> . MINUS assignment
    (33) assignment -> . NUMBER PLUS PLUS
    (34) assignment -> . ID PLUS PLUS
    (35) assignment -> . array_usage PLUS PLUS
    (36) assignment -> . NUMBER MINUS MINUS
    (37) assignment -> . ID MINUS MINUS
    (38) assignment -> . array_usage MINUS MINUS
    (39) assignment -> . NUMBER
    (40) assignment -> . ID
    (41) assignment -> . LETTER
    (44) array_usage -> . ID LBRACKET assignment RBRACKET

    ID              shift and go to state 17
    NUMBER          shift and go to state 21
    APOST           shift and go to state 23
    LPAREN          shift and go to state 18
    MINUS           shift and go to state 22
    LETTER          shift and go to state 24

    assignment                     shift and go to state 19
    array_usage                    shift and go to state 20

state 6

    (44) array_usage -> ID . LBRACKET assignment RBRACKET

    LBRACKET        shift and go to state 25


state 7

    (5) external-declaration -> array_usage . SEMICOLON

    SEMICOLON       shift and go to state 26


state 8

    (7) external-declaration -> macro_definition .

    INT             reduce using rule 7 (external-declaration -> macro_definition .)
    FLOAT           reduce using rule 7 (external-declaration -> macro_definition .)
    CHAR            reduce using rule 7 (external-declaration -> macro_definition .)
    VOID            reduce using rule 7 (external-declaration -> macro_definition .)
    ID              reduce using rule 7 (external-declaration -> macro_definition .)
    POUND           reduce using rule 7 (external-declaration -> macro_definition .)
    $end            reduce using rule 7 (external-declaration -> macro_definition .)


state 9

    (8) external-declaration -> file_inclusion .

    INT             reduce using rule 8 (external-declaration -> file_inclusion .)
    FLOAT           reduce using rule 8 (external-declaration -> file_inclusion .)
    CHAR            reduce using rule 8 (external-declaration -> file_inclusion .)
    VOID            reduce using rule 8 (external-declaration -> file_inclusion .)
    ID              reduce using rule 8 (external-declaration -> file_inclusion .)
    POUND           reduce using rule 8 (external-declaration -> file_inclusion .)
    $end            reduce using rule 8 (external-declaration -> file_inclusion .)


state 10

    (58) type -> INT .

    ID              reduce using rule 58 (type -> INT .)
    NUMBER          reduce using rule 58 (type -> INT .)
    APOST           reduce using rule 58 (type -> INT .)
    LPAREN          reduce using rule 58 (type -> INT .)
    MINUS           reduce using rule 58 (type -> INT .)
    LETTER          reduce using rule 58 (type -> INT .)


state 11

    (59) type -> FLOAT .

    ID              reduce using rule 59 (type -> FLOAT .)
    NUMBER          reduce using rule 59 (type -> FLOAT .)
    APOST           reduce using rule 59 (type -> FLOAT .)
    LPAREN          reduce using rule 59 (type -> FLOAT .)
    MINUS           reduce using rule 59 (type -> FLOAT .)
    LETTER          reduce using rule 59 (type -> FLOAT .)


state 12

    (60) type -> CHAR .

    ID              reduce using rule 60 (type -> CHAR .)
    NUMBER          reduce using rule 60 (type -> CHAR .)
    APOST           reduce using rule 60 (type -> CHAR .)
    LPAREN          reduce using rule 60 (type -> CHAR .)
    MINUS           reduce using rule 60 (type -> CHAR .)
    LETTER          reduce using rule 60 (type -> CHAR .)


state 13

    (61) type -> VOID .

    ID              reduce using rule 61 (type -> VOID .)
    NUMBER          reduce using rule 61 (type -> VOID .)
    APOST           reduce using rule 61 (type -> VOID .)
    LPAREN          reduce using rule 61 (type -> VOID .)
    MINUS           reduce using rule 61 (type -> VOID .)
    LETTER          reduce using rule 61 (type -> VOID .)


state 14

    (82) macro_definition -> POUND . DEFINE ID assignment
    (83) file_inclusion -> POUND . INCLUDE LESS HEADER GREATER
    (84) file_inclusion -> POUND . INCLUDE QUOTE HEADER QUOTE

    DEFINE          shift and go to state 27
    INCLUDE         shift and go to state 28


state 15

    (1) program -> function program .

    $end            reduce using rule 1 (program -> function program .)


state 16

    (2) program -> external-declaration program .

    $end            reduce using rule 2 (program -> external-declaration program .)


state 17

    (45) function -> type ID . LPAREN argument_list_option RPAREN compound_statement
    (14) assignment -> ID . ASSIGN assignment
    (15) assignment -> ID . ASSIGN function_call
    (16) assignment -> ID . ASSIGN array_usage
    (18) assignment -> ID . COMMA assignment
    (20) assignment -> ID . PLUS assignment
    (21) assignment -> ID . MINUS assignment
    (22) assignment -> ID . TIMES assignment
    (23) assignment -> ID . DIVIDE assignment
    (24) assignment -> ID . MODULUS assignment
    (34) assignment -> ID . PLUS PLUS
    (37) assignment -> ID . MINUS MINUS
    (40) assignment -> ID .
    (44) array_usage -> ID . LBRACKET assignment RBRACKET

    LPAREN          shift and go to state 29
    ASSIGN          shift and go to state 30
    COMMA           shift and go to state 31
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33
    TIMES           shift and go to state 34
    DIVIDE          shift and go to state 35
    MODULUS         shift and go to state 36
    SEMICOLON       reduce using rule 40 (assignment -> ID .)
    LBRACKET        shift and go to state 25


state 18

    (31) assignment -> LPAREN . assignment RPAREN
    (14) assignment -> . ID ASSIGN assignment
    (15) assignment -> . ID ASSIGN function_call
    (16) assignment -> . ID ASSIGN array_usage
    (17) assignment -> . array_usage ASSIGN assignment
    (18) assignment -> . ID COMMA assignment
    (19) assignment -> . NUMBER COMMA assignment
    (20) assignment -> . ID PLUS assignment
    (21) assignment -> . ID MINUS assignment
    (22) assignment -> . ID TIMES assignment
    (23) assignment -> . ID DIVIDE assignment
    (24) assignment -> . ID MODULUS assignment
    (25) assignment -> . NUMBER PLUS assignment
    (26) assignment -> . NUMBER MINUS assignment
    (27) assignment -> . NUMBER TIMES assignment
    (28) assignment -> . NUMBER DIVIDE assignment
    (29) assignment -> . NUMBER MODULUS assignment
    (30) assignment -> . APOST assignment APOST
    (31) assignment -> . LPAREN assignment RPAREN
    (32) assignment -> . MINUS assignment
    (33) assignment -> . NUMBER PLUS PLUS
    (34) assignment -> . ID PLUS PLUS
    (35) assignment -> . array_usage PLUS PLUS
    (36) assignment -> . NUMBER MINUS MINUS
    (37) assignment -> . ID MINUS MINUS
    (38) assignment -> . array_usage MINUS MINUS
    (39) assignment -> . NUMBER
    (40) assignment -> . ID
    (41) assignment -> . LETTER
    (44) array_usage -> . ID LBRACKET assignment RBRACKET

    ID              shift and go to state 38
    NUMBER          shift and go to state 21
    APOST           shift and go to state 23
    LPAREN          shift and go to state 18
    MINUS           shift and go to state 22
    LETTER          shift and go to state 24

    assignment                     shift and go to state 37
    array_usage                    shift and go to state 39

state 19

    (4) external-declaration -> type assignment . SEMICOLON

    SEMICOLON       shift and go to state 40


state 20

    (6) external-declaration -> type array_usage . SEMICOLON
    (17) assignment -> array_usage . ASSIGN assignment
    (35) assignment -> array_usage . PLUS PLUS
    (38) assignment -> array_usage . MINUS MINUS

    SEMICOLON       shift and go to state 41
    ASSIGN          shift and go to state 42
    PLUS            shift and go to state 43
    MINUS           shift and go to state 44


state 21

    (19) assignment -> NUMBER . COMMA assignment
    (25) assignment -> NUMBER . PLUS assignment
    (26) assignment -> NUMBER . MINUS assignment
    (27) assignment -> NUMBER . TIMES assignment
    (28) assignment -> NUMBER . DIVIDE assignment
    (29) assignment -> NUMBER . MODULUS assignment
    (33) assignment -> NUMBER . PLUS PLUS
    (36) assignment -> NUMBER . MINUS MINUS
    (39) assignment -> NUMBER .

    COMMA           shift and go to state 45
    PLUS            shift and go to state 46
    MINUS           shift and go to state 47
    TIMES           shift and go to state 48
    DIVIDE          shift and go to state 49
    MODULUS         shift and go to state 50
    SEMICOLON       reduce using rule 39 (assignment -> NUMBER .)
    RPAREN          reduce using rule 39 (assignment -> NUMBER .)
    APOST           reduce using rule 39 (assignment -> NUMBER .)
    RBRACKET        reduce using rule 39 (assignment -> NUMBER .)
    INT             reduce using rule 39 (assignment -> NUMBER .)
    FLOAT           reduce using rule 39 (assignment -> NUMBER .)
    CHAR            reduce using rule 39 (assignment -> NUMBER .)
    VOID            reduce using rule 39 (assignment -> NUMBER .)
    ID              reduce using rule 39 (assignment -> NUMBER .)
    POUND           reduce using rule 39 (assignment -> NUMBER .)
    $end            reduce using rule 39 (assignment -> NUMBER .)
    EQUALS          reduce using rule 39 (assignment -> NUMBER .)
    LESS            reduce using rule 39 (assignment -> NUMBER .)
    GREATER         reduce using rule 39 (assignment -> NUMBER .)
    AND             reduce using rule 39 (assignment -> NUMBER .)
    OR              reduce using rule 39 (assignment -> NUMBER .)


state 22

    (32) assignment -> MINUS . assignment
    (14) assignment -> . ID ASSIGN assignment
    (15) assignment -> . ID ASSIGN function_call
    (16) assignment -> . ID ASSIGN array_usage
    (17) assignment -> . array_usage ASSIGN assignment
    (18) assignment -> . ID COMMA assignment
    (19) assignment -> . NUMBER COMMA assignment
    (20) assignment -> . ID PLUS assignment
    (21) assignment -> . ID MINUS assignment
    (22) assignment -> . ID TIMES assignment
    (23) assignment -> . ID DIVIDE assignment
    (24) assignment -> . ID MODULUS assignment
    (25) assignment -> . NUMBER PLUS assignment
    (26) assignment -> . NUMBER MINUS assignment
    (27) assignment -> . NUMBER TIMES assignment
    (28) assignment -> . NUMBER DIVIDE assignment
    (29) assignment -> . NUMBER MODULUS assignment
    (30) assignment -> . APOST assignment APOST
    (31) assignment -> . LPAREN assignment RPAREN
    (32) assignment -> . MINUS assignment
    (33) assignment -> . NUMBER PLUS PLUS
    (34) assignment -> . ID PLUS PLUS
    (35) assignment -> . array_usage PLUS PLUS
    (36) assignment -> . NUMBER MINUS MINUS
    (37) assignment -> . ID MINUS MINUS
    (38) assignment -> . array_usage MINUS MINUS
    (39) assignment -> . NUMBER
    (40) assignment -> . ID
    (41) assignment -> . LETTER
    (44) array_usage -> . ID LBRACKET assignment RBRACKET

    ID              shift and go to state 38
    NUMBER          shift and go to state 21
    APOST           shift and go to state 23
    LPAREN          shift and go to state 18
    MINUS           shift and go to state 22
    LETTER          shift and go to state 24

    assignment                     shift and go to state 51
    array_usage                    shift and go to state 39

state 23

    (30) assignment -> APOST . assignment APOST
    (14) assignment -> . ID ASSIGN assignment
    (15) assignment -> . ID ASSIGN function_call
    (16) assignment -> . ID ASSIGN array_usage
    (17) assignment -> . array_usage ASSIGN assignment
    (18) assignment -> . ID COMMA assignment
    (19) assignment -> . NUMBER COMMA assignment
    (20) assignment -> . ID PLUS assignment
    (21) assignment -> . ID MINUS assignment
    (22) assignment -> . ID TIMES assignment
    (23) assignment -> . ID DIVIDE assignment
    (24) assignment -> . ID MODULUS assignment
    (25) assignment -> . NUMBER PLUS assignment
    (26) assignment -> . NUMBER MINUS assignment
    (27) assignment -> . NUMBER TIMES assignment
    (28) assignment -> . NUMBER DIVIDE assignment
    (29) assignment -> . NUMBER MODULUS assignment
    (30) assignment -> . APOST assignment APOST
    (31) assignment -> . LPAREN assignment RPAREN
    (32) assignment -> . MINUS assignment
    (33) assignment -> . NUMBER PLUS PLUS
    (34) assignment -> . ID PLUS PLUS
    (35) assignment -> . array_usage PLUS PLUS
    (36) assignment -> . NUMBER MINUS MINUS
    (37) assignment -> . ID MINUS MINUS
    (38) assignment -> . array_usage MINUS MINUS
    (39) assignment -> . NUMBER
    (40) assignment -> . ID
    (41) assignment -> . LETTER
    (44) array_usage -> . ID LBRACKET assignment RBRACKET

    ID              shift and go to state 38
    NUMBER          shift and go to state 21
    APOST           shift and go to state 23
    LPAREN          shift and go to state 18
    MINUS           shift and go to state 22
    LETTER          shift and go to state 24

    assignment                     shift and go to state 52
    array_usage                    shift and go to state 39

state 24

    (41) assignment -> LETTER .

    SEMICOLON       reduce using rule 41 (assignment -> LETTER .)
    RPAREN          reduce using rule 41 (assignment -> LETTER .)
    APOST           reduce using rule 41 (assignment -> LETTER .)
    RBRACKET        reduce using rule 41 (assignment -> LETTER .)
    INT             reduce using rule 41 (assignment -> LETTER .)
    FLOAT           reduce using rule 41 (assignment -> LETTER .)
    CHAR            reduce using rule 41 (assignment -> LETTER .)
    VOID            reduce using rule 41 (assignment -> LETTER .)
    ID              reduce using rule 41 (assignment -> LETTER .)
    POUND           reduce using rule 41 (assignment -> LETTER .)
    $end            reduce using rule 41 (assignment -> LETTER .)
    EQUALS          reduce using rule 41 (assignment -> LETTER .)
    LESS            reduce using rule 41 (assignment -> LETTER .)
    GREATER         reduce using rule 41 (assignment -> LETTER .)
    AND             reduce using rule 41 (assignment -> LETTER .)
    OR              reduce using rule 41 (assignment -> LETTER .)


state 25

    (44) array_usage -> ID LBRACKET . assignment RBRACKET
    (14) assignment -> . ID ASSIGN assignment
    (15) assignment -> . ID ASSIGN function_call
    (16) assignment -> . ID ASSIGN array_usage
    (17) assignment -> . array_usage ASSIGN assignment
    (18) assignment -> . ID COMMA assignment
    (19) assignment -> . NUMBER COMMA assignment
    (20) assignment -> . ID PLUS assignment
    (21) assignment -> . ID MINUS assignment
    (22) assignment -> . ID TIMES assignment
    (23) assignment -> . ID DIVIDE assignment
    (24) assignment -> . ID MODULUS assignment
    (25) assignment -> . NUMBER PLUS assignment
    (26) assignment -> . NUMBER MINUS assignment
    (27) assignment -> . NUMBER TIMES assignment
    (28) assignment -> . NUMBER DIVIDE assignment
    (29) assignment -> . NUMBER MODULUS assignment
    (30) assignment -> . APOST assignment APOST
    (31) assignment -> . LPAREN assignment RPAREN
    (32) assignment -> . MINUS assignment
    (33) assignment -> . NUMBER PLUS PLUS
    (34) assignment -> . ID PLUS PLUS
    (35) assignment -> . array_usage PLUS PLUS
    (36) assignment -> . NUMBER MINUS MINUS
    (37) assignment -> . ID MINUS MINUS
    (38) assignment -> . array_usage MINUS MINUS
    (39) assignment -> . NUMBER
    (40) assignment -> . ID
    (41) assignment -> . LETTER
    (44) array_usage -> . ID LBRACKET assignment RBRACKET

    ID              shift and go to state 38
    NUMBER          shift and go to state 21
    APOST           shift and go to state 23
    LPAREN          shift and go to state 18
    MINUS           shift and go to state 22
    LETTER          shift and go to state 24

    assignment                     shift and go to state 53
    array_usage                    shift and go to state 39

state 26

    (5) external-declaration -> array_usage SEMICOLON .

    INT             reduce using rule 5 (external-declaration -> array_usage SEMICOLON .)
    FLOAT           reduce using rule 5 (external-declaration -> array_usage SEMICOLON .)
    CHAR            reduce using rule 5 (external-declaration -> array_usage SEMICOLON .)
    VOID            reduce using rule 5 (external-declaration -> array_usage SEMICOLON .)
    ID              reduce using rule 5 (external-declaration -> array_usage SEMICOLON .)
    POUND           reduce using rule 5 (external-declaration -> array_usage SEMICOLON .)
    $end            reduce using rule 5 (external-declaration -> array_usage SEMICOLON .)


state 27

    (82) macro_definition -> POUND DEFINE . ID assignment

    ID              shift and go to state 54


state 28

    (83) file_inclusion -> POUND INCLUDE . LESS HEADER GREATER
    (84) file_inclusion -> POUND INCLUDE . QUOTE HEADER QUOTE

    LESS            shift and go to state 55
    QUOTE           shift and go to state 56


state 29
